manifests/cert-manager-duckdns-webhook/test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  generation: 3
  name: haos
  namespace: test
spec:
  ingressClassName: traefik
  rules:
  - host: haos.budabuda-k3s.duckdns.org
    http:
      paths:
      - backend:
          service:
            name: haos
            port:
              number: 8123
        path: /
        pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nuc
  namespace: test
spec:
  ingressClassName: traefik
  rules:
  - host: nuc.budabuda-k3s.duckdns.org
    http:
      paths:
      - backend:
          service:
            name: nuc
            port:
              number: 81
        path: /
        pathType: Exact
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: cert-manager-webhook-duckdns-staging
    external-dns.alpha.kubernetes.io/hostname: whoamidc.budabuda.duckdns.org
    external-dns.alpha.kubernetes.io/target: 192.168.1.4
    external-dns.alpha.kubernetes.io/ttl: "60"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
  creationTimestamp: "2025-02-12T23:32:18Z"
  generation: 1
  name: whoami-http
  namespace: test
  resourceVersion: "1316921"
  uid: 19e86cb7-933f-4fb7-bd45-c2c14bb0725c
spec:
  ingressClassName: traefik
  rules:
  - host: dc-whoami.budabuda-k3s.duckdns.org
    http:
      paths:
      - backend:
          service:
            name: whoami-svc
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - dc-whoami.budabuda-k3s.duckdns.org
    secretName: dc-whoami-budabuda-k3s-duckdns-org
